<resources>
    <string name="app_name">TheRickAndMorty</string>

<!-- FROM SKELETON-->
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_black">Black</string>
    <string name="color_white">White</string>
    <string name="changed_color">Color has been changed to: %1$s</string>
    <string name="change_color">Change Color</string>
    <string name="change_color_screen_title">Change Color (%1$s)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="selected">Selected</string>
    <string name="some_text">Some text</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="origin">Origin</string>
    <string name="last_location">Last location</string>
    <string name="episode_name">Episode name</string>
    <string name="episode_number">Episode number</string>
    <string name="air_date">Air date</string>
    <string name="location_name">Location name</string>
    <string name="location_type">Location type</string>
    <string name="location_dimension">Location dimension</string>
    <!-- END FROM SKELETON-->
</resources>