<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:backgroundTint="@color/mr_main_background_color"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/radius_card_corner">


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/ivCharacterImage"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_character_default_150x150" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvCharacterName"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvCharacterSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species" />

        <TextView
            android:id="@+id/tvCharacterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/tvCharacterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

    </LinearLayout>


</androidx.cardview.widget.CardView>