<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding">


    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCharacterImageDetails"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_character_default_150x150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <LinearLayout
        android:id="@+id/linearInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/tvCharacterDetailsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCharacterImageDetails"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/tvOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origin" />

        <TextView
            android:id="@+id/tvLastLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_location" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCharacterDetailsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Список эпизодов с участием персонажа:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCharacterImageDetails" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srCharacterDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCharacterDetailsTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCharacterDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_episode_card" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>