<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:backgroundTint="@color/mr_main_background_color"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/radius_card_corner">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_name" />

        <TextView
            android:id="@+id/tvLocationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_type" />

        <TextView
            android:id="@+id/tvLocationDimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_dimension" />


    </LinearLayout>


</androidx.cardview.widget.CardView>